# bot2.1

./: README.md
DayTrading/: .env.example  .gitignore  README.md  main.py  pyproject.toml
DayTrading/config/: logging.yaml  strategy.yaml
DayTrading/intraday/: market_clock.py  orchestrator.py  scheduler.py  settings.py
DayTrading/intraday/ai/: provenance.py  regime.py  sentiment.py
DayTrading/intraday/alerts/: pushover.py
DayTrading/intraday/dashboard/: app.py
DayTrading/intraday/data/: catalysts.py  finnhub_feed.py  ibkr_feed.py  yahoo_feed.py
DayTrading/intraday/exec/: order_client.py  trade_manager.py
DayTrading/intraday/ingestion/: watchlist_loader.py
DayTrading/intraday/storage/: db.py  models.py  schema.py
DayTrading/intraday/storage/migrations/: 001_init.sql  002_indexes.sql
DayTrading/intraday/strategy/: engine.py  features.py  indicators.py  rules.py
DayTrading/intraday/utils/: env.py  logging.py  throttle.py  time.py
DayTrading/samples/: watchlist_minimal.json
DayTrading/scripts/: import_watchlist.py  upgrade_phase2_schema.py
DayTrading/tests/: conftest.py  test_ai_sentiment.py  test_orchestrator_once.py  test_strategy_rules.py  test_trade_manager.py  test_watchlist_ingest.py
