[tool.poetry]
name = "daytrading"
version = "0.1.0"
description = "Standalone intraday signal engine"
authors = ["Auto Dev <auto@example.com>"]
packages = [{ include = "intraday" }]

[tool.poetry.dependencies]
python = "^3.11"
APScheduler = "^3.10"
ib-insync = { version = "^0.9", optional = true }
httpx = "^0.27"
transformers = { version = "^4.39", optional = true }
torch = { version = "^2.2", optional = true }
typer = "^0.9"
streamlit = "^1.32"
SQLAlchemy = "^2.0"
black = { version = "^24.2", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
ruff = "^0.3"
mypy = "^1.8"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
